--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1,2 +1,8 @@
 /* Your styles go here */
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+.jumbotron{
+  background: url(https://images.unsplash.com/photo-1504282706065-f5866e9cbeeb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80);
+  background-position: 0 -30px;
+  background-size: cover;
+}
